infra/k8s/eventbus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventbus-depl
spec:
  selector:
    matchLabels:
      app: eventbus
  template:
    metadata:
      labels:
        app: eventbus
    spec:
      containers:
      - name: eventbus
        image: naseemahmad244/eventbus
---
apiVersion: v1
kind: Service
metadata:
  name: eventbus-clusterip-service
spec:
  selector:
    app: eventbus
  ports:
  - port: 4004
    targetPort: 4004
    protocol: TCP
