infra/k8s/moderate-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderate-depl
spec:
  selector:
    matchLabels:
      app: moderate
  template:
    metadata:
      labels:
        app: moderate
    spec:
      containers:
      - name: moderate
        image: naseemahmad244/moderate
---
apiVersion: v1
kind: Service
metadata:
  name: moderate-clusterip-service
spec:
  selector:
    app: moderate
  ports:
  - port: 4002
    targetPort: 4002
    protocol: TCP
