infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
      - name: posts
        image: naseemahmad244/posts
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-service
spec:
  selector:
    app: posts
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: posts-nodeport-service
spec:
  selector:
    app: posts
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
  type: NodePort
