infra/k8s/queries-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queries-depl
spec:
  selector:
    matchLabels:
      app: queries
  template:
    metadata:
      labels:
        app: queries
    spec:
      containers:
      - name: moderate
        image: naseemahmad244/queries
---
apiVersion: v1
kind: Service
metadata:
  name: queries-clusterip-service
spec:
  selector:
    app: queries
  ports:
  - port: 4003
    targetPort: 4003
    protocol: TCP
