infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: posts.com
    http:
      paths:
      - pathType: Prefix
        path: /posts/create
        backend:
          service:
            name: posts-clusterip-service
            port: 
              number: 4000
      - pathType: Prefix
        path: /post/?(.*)/createcomment
        backend:
          service:
            name: comments-clusterip-service
            port: 
              number: 4001
      - pathType: Prefix
        path: /queries/getallposts
        backend:
          service:
            name: queries-clusterip-service
            port: 
              number: 4003
      - pathType: Prefix
        path: /
        backend:
          service:
            name: client-clusterip-service
            port: 
              number: 3000
